--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "PortfolioCurrent",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "test": "node app"
+    "start": "node index"
   },
   "keywords": [],
   "author": "",
